fix bug logo sticking out with side header full screen search

--- a/sass/components/_glazed-header--side.scss
+++ b/sass/components/_glazed-header--side.scss
@@ -26,7 +26,7 @@
     color: $header-side-text-color;
     padding: 40px 20px;
     position: fixed;
-    z-index: 4050;
+    z-index: 4060;
     top: 0;
     left: 0;
     width: 300px;
